# biautom

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/biautom/: main.py
src/biautom/chipdata/: grass.json  new.json
src/biautom/data/json/chip_data/: default.json  grass.json
src/biautom/data/json/schemata/chip_schema/: chip_data.json
src/biautom/data/json/schemata/chip_schema/sub_schemata/: base_check.json  base_query.json  condition.json  conjunctive_query.json  criterion.json  min_query.json  player_query.json  position_specification.json  positions.json  sum_query.json  two_dim_vector.json  value.json
src/biautom/game/: chip.py  chip_data_handler.py  chip_reader.py  place.py  player.py
src/biautom/misc/: base-query-schema.json  chip-schema.json  chipreader.py  schema.json  span.py  test-query-schema.json  two-vector-schema.json
src/resources/json/schemata/chip_schema/: chip_data.json
tests/: bidicttest.py  chiptests.py  kwargs.py  readertest.py  schema-test.py  span_test.py  traversable.py
